# mftools

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test.parquet
.github/: FUNDING.yml
.github/workflows/: documentation.yml  lint.yml  publish.yml  test.yml
LICENSE/: index.html
changelog/: index.html
docs/: changelog.md  index.md  macros.md
docs/guide/: index.md
docs/plugins/: amfi.md  index.md
docs/reference/: models.md  niveshpy.md
docs/reference/plugins/: amfi.md  index.md
guide/: index.html
macros/: index.html
mftools/: __init__.py  main.py  tickers.py  utils.py
mftools/io/: download.py
mftools/models/: __init__.py  base.py  helpers.py  plugins.py  sources.py  types.py
mftools/plugins/: amfi.py
mftools/plugins/tests/: test_amfi.py
niveshpy/: __init__.py  main.py  utils.py
niveshpy/models/: __init__.py  base.py  helpers.py  plugins.py  sources.py  types.py
niveshpy/plugins/: amfi.py
niveshpy/plugins/tests/: test_amfi.py
plugins/: index.html
plugins/amfi/: index.html
reference/models/: index.html
reference/niveshpy/: index.html
reference/plugins/: index.html
reference/plugins/amfi/: index.html
search/: search_index.json
tests/: test_io.py  test_plugin.py  test_source.py
